# RoA

./: README.md
dynSys/: acrobot.pickle  invPend.pickle
ompl/ompl/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main3_exp.cpp  main3_ode.cpp  main_Acro.cpp  main_AcroStar.cpp  main_Acrobot.cpp  main_SO.cpp
results/: acroSwingUp10.pickle  acroUpright.pickle  invPendSwingUp.pickle
src/: acroSwingUpSimulation.py  acrobot.py  coreUtils.py  couenneUtils.py  cvxUtils.py  cythonUtils.html  cythonUtils.pyx  dynamicSystems.py  exAcrobotSwingUp.py  exAcrobotUnstable.py  exInvertedPendulumSwingUp.py  exInvertedPendulumUnstable.py  execUtils.py  interpolators.py  invPendUpright.pickle  invertedPendulum.py  lyapunov.py  lyapunovShapes.py  lyapunov_Parallel.py  plotUtils.py  slidingModeCtrl.py  solveProblem.py  status.txt  trajectories.py  utils.py
src/matlab/Acrobot/: AAcrotilde.txt  AcrobotPlant.m  BAcro.txt  KAcro.txt  Poly.txt  Pout.txt  Prelax.txt  README.txt  acroSim.m  fAcro.txt  pathdef.m  runMaxROA.m  runMaxROA.m~  runSwingUp.m  taylorAcroB_0.txt
src/matlab/Pendulum/: Atilde.txt  K.txt  KacroOut.txt  Kout.txt  KoutStr.txt  Pendulum.pmd  Pout.txt  Prelax.txt  T10.txt  T100.txt  T11.txt  T12.txt  T13.txt  T14.txt  T15.txt  T16.txt  T17.txt  T18.txt  T19.txt  T2.txt  T20.txt  T21.txt  T22.txt  T23.txt  T24.txt  T25.txt  T26.txt  T27.txt  T28.txt  T29.txt  T3.txt  T30.txt  T31.txt  T32.txt  T33.txt  T34.txt  T35.txt  T36.txt  (+171 more)
trajectories/acroSwingUp10/: ompl2Traj_T.npy  ompl2Traj_U.npy  ompl2Traj_X.npy
varBounds/: RES_2_3_14_SDR.pickle  RES_4_10_91_SDR.pickle
(+1 files in other folders)
